--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@reef-chain/evm-provider": "^4.0.4"
+    "@reef-chain/evm-provider": "^4.0.4",
+    "ethers": "^5.6.9"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
